src/css/markdown.css
/*!
 * renren-markdown default markdown styling
 * derived from github.com, modified for consistent inlined display
 */

/* root */
.rrmd {
    font-size: 15px;
    line-height: 1.7;
    overflow: hidden;
}
.rrmd>:first-child {
    margin-top: 0!important;
}
.rrmd>:last-child {
    margin-bottom: 0!important;
}
.rrmd p, .rrmd blockquote, .rrmd ul, .rrmd ol, .rrmd dl, .rrmd table, .rrmd pre {
    margin: 15px /*1em*/ 0;
}

/* blockquote */
.rrmd blockquote {
    border-left: 4px solid #DDD;
    padding: 0 15px;
    color: #777;
}
.rrmd blockquote>:first-child {
    margin-top: 0;
}
.rrmd blockquote>:last-child {
    margin-bottom: 0;
}

/* table */
.rrmd table {
    width: 100%;
    overflow: auto;
    display: block;
}
.rrmd table th {
    font-weight: bold;
}
.rrmd table th, .rrmd table td {
    border: 1px solid #ddd;
    padding: 6px 13px;
}
.rrmd table tr {
    border-top: 1px solid #ccc;
    background-color: #fff;
}
.rrmd table tr: nth-child(2n) {
    background-color: #f8f8f8;
}

/* headers */
.rrmd h1, .rrmd h2, .rrmd h3, .rrmd h4, .rrmd h5, .rrmd h6 {
    margin: 1em 0 15px;
    padding: 0;
    font-weight: bold;
    line-height: 1.7;
    cursor: text;
    position: relative;
}
.rrmd h1 {
    font-size: 2.5em;
    border-bottom: 1px solid #ddd;
}
.rrmd h2 {
    font-size: 2em;
    border-bottom: 1px solid #eee;
}
.rrmd h3 {
    font-size: 1.5em;
}
.rrmd h4 {
    font-size: 1.2em;
}
.rrmd h5 {
    font-size: 1em;
}
.rrmd h6 {
    color: #777;
    font-size: 1em;
}

/* lists */
.rrmd li p.first {
    display: inline-block;
}
.rrmd ul, .rrmd ol {
    padding-left: 30px;
}
.rrmd ul ul, .rrmd ul ol,
.rrmd ol ol, .rrmd ol ul {
    margin-top: 0;
    margin-bottom: 0;
}
/*.rrmd dl {
padding: 0;
}
    .rrmd dl dt {
    font-size: 14px;
    font-weight: bold;
    font-style: italic;
    padding: 0;
    margin-top: 15px;
}
    .rrmd dl dd {
    margin-bottom: 15px;
    padding: 0 15px;
}*/
.rrmd ol {
    list-style: decimal outside;    
}
.rrmd ul {
    list-style: disc outside;
}

/* code */
.rrmd code, .rrmd pre {
    font-family: Consolas, "Liberation Mono", Courier, monospace;
    font-size: 12px;
}
.rrmd h1 tt, .rrmd h1 code,
.rrmd h2 tt, .rrmd h2 code,
.rrmd h3 tt, .rrmd h3 code,
.rrmd h4 tt, .rrmd h4 code,
.rrmd h5 tt, .rrmd h5 code,
.rrmd h6 tt, .rrmd h6 code {
    font-size: inherit;
}
.rrmd code, .rrmd tt {
    margin: 0 2px;
    padding: 0 5px;
    border: 1px solid #ddd;
    background-color: #f8f8f8;
    border-radius: 3px;
}
.rrmd code {
    white-space: nowrap;
}
.rrmd pre>code {
    margin: 0;
    padding: 0;
    white-space: inherit;
    border: none;
    background: transparent;
}
.rrmd .highlight pre, .rrmd pre {
    background-color: #f8f8f8;
    border: 1px solid #ddd;
    font-size: 13px;
    line-height: 19px;
    overflow: auto;
    padding: 6px 10px;
    border-radius: 3px;
}
.rrmd pre code, .rrmd pre tt {
    margin: 0;
    padding: 0;
    background-color: transparent;
    border: none;
}

/* misc */
.rrmd img {
    max-width: 100%;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
.rrmd hr {
    background: transparent url(http://assets.github.com/images/modules/pulls/dirty-shade.png) repeat-x 0 0;
    border: 0 none;
    color: #ccc;
    height: 4px;
    padding: 0;
    margin: 15px 0;
}
.rrmd s, .rrmd del {
    text-decoration: line-through;
    color: #ccc;
}
.rrmd sup {
    vertical-align: super;
    font-size: smaller;
}
.rrmd sub {
    vertical-align: sub;
    font-size: smaller;
}

